--- a/de.fh-zwickau.dev.java.TBP.generator/.project
+++ b/de.fh-zwickau.dev.java.TBP.generator/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>timebudgetplanninggenerator</name>
+	<name>de.fh-zwickau.dev.java.TBP.generator</name>
 	<comment></comment>
 	<projects>
 	</projects>
